--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -20,6 +20,15 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
+      - name: Run tester
+        env:
+          TWILIO_ACCOUNT_SID: ${{ secrets.TWILIO_ACCOUNT_SID }}
+          TWILIO_AUTH_TOKEN: ${{ secrets.TWILIO_AUTH_TOKEN }}
+          WHATSAPP_TO: ${{ secrets.WHATSAPP_TO }}
+          SEARCH_TERM: ${{ secrets.SEARCH_TERM }}
+          SCRAPER_ENABLED: ${{ secrets.SCRAPER_ENABLED }}
+        run: python tester.py
+
       - name: Run scraper
         env:
           TWILIO_ACCOUNT_SID: ${{ secrets.TWILIO_ACCOUNT_SID }}
