Fix: Rename daily-summary.py to summary.py to avoid naming conflict with workflow

--- a/.github/workflows/daily-summary.yml
+++ b/.github/workflows/daily-summary.yml
@@ -30,4 +30,4 @@ jobs:
           WHATSAPP_TO: ${{ secrets.WHATSAPP_TO }}
           SEARCH_TERM: ${{ secrets.SEARCH_TERM }}
           SCRAPER_ENABLED: ${{ secrets.SCRAPER_ENABLED }}
-        run: python daily-summary.py
+        run: python summary.py
