--- a/.github/workflows/daily-summary.yml
+++ b/.github/workflows/daily-summary.yml
@@ -2,10 +2,7 @@ name: Daily Residences Summary
 
 on:
   schedule:
-    - cron: "0 6 * * *" # 6:00 AM
-    - cron: "0 12 * * *" # 12:00 PM (mediodía)
-    - cron: "0 18 * * *" # 6:00 PM
-    - cron: "0 0 * * *" # 12:00 AM (medianoche)
+    - cron: "0 0,6,12,18 * * *" # 12:00 AM, 6:00 AM, 12:00 PM, 6:00 PM
   workflow_dispatch: # también lo puedes lanzar manualmente
 
 jobs:
